Closed Bug 337790 Opened 18 years ago Closed 18 years ago

Unable to view events on calDAV calendars

Categories

(Calendar :: Provider: CalDAV, defect)

defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: browning, Unassigned)

Details

(Whiteboard: [swag:1d][patch in hand])

Attachments

(1 file)

User-Agent:       Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8.0.2) Gecko/20060419 Fedora/1.5.0.2-1.2.fc5 Firefox/1.5.0.2 pango-text
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a1) Gecko/20060512 Mozilla Sunbird/0.3a2

Recent Sunbird nightlies do not display events stored on calDAV servers

Reproducible: Always

Steps to Reproduce:
1. create calDAV calendar
2. place one or more events in the calDAV store
3. note they don't appear in the Sunbird UI

Actual Results:  
items do not appear in the Sunbird UI. Javascript console shows multiple instances of:
Error: [Exception... "'Component does not have requested interface' when calling method: [nsIInterfaceRequestor::getInterface]"  nsresult: "0x80004002 (NS_NOINTERFACE)"  location: "<unknown>"  data: no]

Expected Results:  
Items should appear in the Sunbird UI

Sunbird can still create new events and place them in the calDAV store; it just does not display them.
The Javascript errors started happening at or about the same time that new callbacks were added to the nsIWebDAVService.report interface, for bug 308567
I've heard other reports of this.  Confirming.
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Linux → All
Hardware: PC → All
Flags: blocking0.3+
lilmatt: any idea if bug 342051 fixes this too?
Whiteboard: [swag:1d]
I still get this issue with todays nightly.
Just some notes:
* this bug first appears (on Linux) with the 2006-04-26 nightly. (The previous nightly only shows CalDAV-stored items the second time it is run, which seems to be a different problem.)
* debug builds show an error at extensions/webdav/src/nsWebDAVUtils.cpp#87 (and others which seem to be triggered by that)
* the likely trigger is changes made 2006-04-25 to fix bug 206053. Building Sunbird with a tree from 2006-05-12 and with the changes for 206053 reverted results in a Sunbird that does not show this (337790) bug. 
Attached patch use GetElementsByTagNameNS — — Splinter Review
This seems to fix the bug as originally posted. There seems to be a new one with similar symptoms, wrt Cosmo at least, caused by new-style item id's with {}. Will post that separately.
Attachment #233717 - Flags: first-review?(dmose)
Whiteboard: [swag:1d] → [swag:1d][patch in hand]
Comment on attachment 233717 [details] [diff] [review]
use GetElementsByTagNameNS

Nice work tracking this down!  r+2r=dmose
Attachment #233717 - Flags: first-review?(dmose) → first-review+
patch checked in.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
I can create and view events now, but the reported error message is still there!

Error: [Exception... "'Component does not have requested interface' when calling method: [nsIInterfaceRequestor::getInterface]"  nsresult: "0x80004002 (NS_NOINTERFACE)"  location: "<unknown>"  data: no]

Using Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060828 Calendar/0.3a2+
(In reply to comment #8)
> I can create and view events now, but the reported error message is still
> there!

This error messages is being addressed in bug 351199. Apart from this I verify this bug fixed.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: