Bug 337790 Unable to view events on calDAV calendars, patch by browning@uwalumni.com, r+2r=dmose